vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_return.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_return.vv:11:6: error: expression evaluated but not used
    9 |             return $embed_file(@FILE)
   10 |         }
   11 |     }().path
      |         ~~~~
   12 | }
