vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_if_return.vv
import v.embed_file

fn main() {
	ok := true
	'' == fn () embed_file.EmbedFileData {
		if ok {
			return $embed_file(@FILE)
		} else {
			return $embed_file(@FILE)
		}
	}().path
}
